(teranode split) changes made based on feedback from PR